--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,9 @@ baseURL: https://www.pscurlin.com/
 languageCode: en-us
 title: Phaedra Sophia Curlin
 theme: ["PaperMod"]
-paginate: 10
+
+pagination:
+  pagerSize: 10
 
 enableRobotsTXT: true
 buildDrafts: false
